# Goodreads-Summariser

./: Demo.ipynb  README.md  Scraping Demo.ipynb  demo.py  pyproject.toml
