[project]
name = "goodreads-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "langchain-ollama>=0.2.2",
    "marimo>=0.10.9",
    "polars>=1.18.0",
    "requests>=2.32.3",
]
